feat(form) delete entry

--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -5,7 +5,7 @@
     display: none;
   }
   
-  fieldset[name="button-wrapper"] {
+  fieldset[name="buttons-wrapper"] {
     display: flex;
     button {
       @extend %button;
