--- a/blocks/form/components/wizard/_progress-bar.scss
+++ b/blocks/form/components/wizard/_progress-bar.scss
@@ -14,6 +14,12 @@
   color: $text-secondary;
 }
 
+.progress-bar__inner {
+  display: flex;
+  gap: 0 $spacing-100;
+  flex-wrap: wrap;
+}
+
 .progress-bar__container,
 .progress-bar__item {
   border-radius: $border-radius-low;
@@ -21,10 +27,8 @@
 
 .progress-bar__container {
   background-color: $color-shade-blue-25;
-  width: 33.33%;
-  display: flex;
-  gap: $spacing-100 0;
-  flex-wrap: wrap;
+  width: calc(33.33% - $spacing-100);
+  display: block;
   margin: $spacing-300 0 $spacing-400;
 }
 
@@ -32,6 +36,7 @@
   background-color: $color-primary;
   display: block;
   height: 6px;
+  width: 0;
 
   @include media('desktop') {
     height: 8px;
