--- a/styles/settings/_elevations.scss
+++ b/styles/settings/_elevations.scss
@@ -3,21 +3,21 @@
 $color-shadow: $color-primary-dark-navy;
 
 @mixin elevation-1 {
-  box-shadow: 0px 2px 4px rgba($color-shadow, 0.2);
+  box-shadow: 0 2px 4px rgba($color-shadow, 0.2);
 }
 
 @mixin elevation-2 {
-  box-shadow: 0px 4px 8px rgba($color-shadow, 0.18);
+  box-shadow: 0 4px 8px rgba($color-shadow, 0.18);
 }
 
 @mixin elevation-3 {
-  box-shadow: 0px 8px 16px rgba($color-shadow, 0.16);
+  box-shadow: 0 8px 16px rgba($color-shadow, 0.16);
 }
 
 @mixin elevation-4 {
-  box-shadow: 0px 16px 32px rgba($color-shadow, 0.14);
+  box-shadow: 0 16px 32px rgba($color-shadow, 0.14);
 }
 
 @mixin elevation-5 {
-  box-shadow: 0px 32px 64px rgba($color-shadow, 0.12);
+  box-shadow: 0 32px 64px rgba($color-shadow, 0.12);
 }
