--- a/blocks/form/components/job-search-results/job-search-results.scss
+++ b/blocks/form/components/job-search-results/job-search-results.scss
@@ -2,15 +2,16 @@
 @use 'sass:meta';
 @use '../../../../styles/settings' as *;
 
-// Main panel container — targets the fieldset using all required classes
+// --------------------------------------------
+// Main panel container — background and layout
+// --------------------------------------------
 fieldset.panel-wrapper.field-job-search-results-container.field-wrapper.form-panel-content.container {
   position: relative;
   width: 100%;
-  padding: var(--Spacing-Spacing-600, 32px);
-  border-radius: 24px 0 48px 0;
+  padding: $spacing-600;
+  border-radius: $spacing-500 0 $spacing-650 0;
 
   background-color: transparent;
-
   background-image: linear-gradient(
                   135deg,
                   $color-shade-blue-04 25%,
@@ -22,11 +23,33 @@ fieldset.panel-wrapper.field-job-search-results-container.field-wrapper.form-pan
   @include elevation-2;
 }
 
-/* -----------------------------
-   Responsive Layout for Job Search Results
------------------------------ */
+.panel-wrapper.field-job-search-results-container {
+  .drop-down-wrapper {
+    select {
+      width: 100%;
+      padding: $spacing-400;
+      border-radius: $spacing-400;
+      background: $color-white;
+      appearance: none;
+      transition: all 0.2s ease;
 
-.panel-wrapper.job-search-results-container {
+      @include elevation-2;
+
+      &:focus {
+        outline: none;
+        border: $spacing-050 solid $color-primary;
+        background-color: $color-white;
+        @include elevation-3; // stronger shadow on click/focus
+      }
+    }
+  }
+}
+
+
+// --------------------------------------------
+// Responsive Layout for Job Search Results
+// --------------------------------------------
+.panel-wrapper.field-job-search-results-container {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -35,23 +58,17 @@ fieldset.panel-wrapper.field-job-search-results-container.field-wrapper.form-pan
   .text-wrapper,
   .drop-down-wrapper,
   .submit-wrapper {
-  .submit-wrapper {
     flex: 1 1 100%;
     max-width: 100%;
     min-width: 200px;
     align-self: stretch;
   }
-  }
 
-
-  .panel-wrapper.field-job-search-results-container {
-    .drop-down-wrapper {
-      .field-label {
-        margin-bottom: $spacing-200;
-      }
+  .drop-down-wrapper {
+    .field-label {
+      margin-bottom: $spacing-200;
     }
   }
-
 
   .submit-wrapper {
     display: flex;
