feat(form) bugfix formoutputfield

--- a/blocks/form/components/formoutputfield/formoutputfield.scss
+++ b/blocks/form/components/formoutputfield/formoutputfield.scss
@@ -1,6 +1,6 @@
 @use '../../../../styles/settings' as *;
 
-.field-formoutputfield {
+form fieldset.formoutputfield {
   background: $color-shade-blue-10;
 
   > legend {
