--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
@@ -1,6 +1,6 @@
 @use '../../../../styles/settings' as *;
 
-.field-formoutputfield,
+.formoutputfield,
 .panel-formcontextualhelp {
   padding: $spacing-400 $spacing-300;
   background: $bg-primary;
