--- a/blocks/form/components/formoutputfield/formoutputfield.css
+++ b/blocks/form/components/formoutputfield/formoutputfield.css
@@ -1,3 +1,3 @@
-.field-formoutputfield{background:#e6f2fa}.field-formoutputfield > legend{display:none}
+form fieldset.formoutputfield{background:#e6f2fa}form fieldset.formoutputfield > legend{display:none}
 
 /*# sourceMappingURL=formoutputfield.css.map */
