--- a/styles/forms/_input.scss
+++ b/styles/forms/_input.scss
@@ -108,7 +108,7 @@ textarea {
   }
 }
 
-/* Persistent spellcheck overlay */
+/* Persistent spellcheck overlay for all form inputs */
 .spellwrap {
   position: relative;
   display: block;
