--- a/blocks/main-menu/main-menu.scss
+++ b/blocks/main-menu/main-menu.scss
@@ -4,6 +4,7 @@
   padding: $spacing-400 $spacing-450;
   background-color: $color-white;
   border-bottom: 1px solid $color-shade-navy-40;
+  position: relative;
 }
 
 .main-menu__inner {
@@ -14,6 +15,11 @@
   div:first-child {
     display: none;
   }
+}
+
+.main-menu__user-button,
+.main-menu__logo {
+  cursor: pointer;
 }
 
 .main-menu__logo {
@@ -42,12 +48,81 @@
   background-size: 16px;
   background-repeat: no-repeat;
   flex-shrink: 0;
+
+  span {
+    @extend %visually-hidden;
+  }
 }
 
 .main-menu__account-menu {
   display: none;
+  list-style: none;
+  position: absolute;
+  right: 0;
+  top: 76px;
+  padding: 0;
+  width: 100%;
+  margin: 0;
+
+  @include media('desktop') {
+    max-width: 343px;
+    border-left: 1px solid $color-shade-navy-40;
+    border-bottom: 1px solid $color-shade-navy-40;
+  }
 }
 
 .main-menu__account-menu--is-visible {
   display: block;
+}
+
+.main-menu__account-menu-item {
+  margin-bottom: 0;
+  padding: 0 $spacing-400;
+
+  &:not(:last-child) {
+    .main-menu__account-menu-link {
+      border-bottom: 2px solid $color-shade-navy-20;
+    }
+  }
+}
+
+.main-menu__account-menu-link {
+  display: flex;
+  align-items: center;
+  padding: $spacing-400;
+  color: $color-accent;
+  font-weight: 500;
+  text-decoration: none;
+  font-size: 18px;
+
+  @include media('desktop') {
+    font-size: 17px;
+  }
+}
+
+.main-menu__account-menu-icon {
+  display: block;
+  height: 24px;
+  width: 24px;
+  margin-right: $spacing-200;
+}
+
+.main-menu__account-menu-item--is-active {
+  position: relative;
+
+  .main-menu__account-menu-link {
+    color: $color-primary-navy;
+
+    &::before {
+      content: '';
+      display: block;
+      background-color: $color-primary-navy;
+      width: 8px;
+      height: 34px;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      position: absolute;
+    }
+  }
 }
