--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -4,6 +4,11 @@
   @extend %button;
 }
 
+.button--hollow {
+  @extend %button;
+  @extend %button--hollow;
+}
+
 .link {
   color: $color-primary;
   box-shadow: none;
