fix: update grid column links css to match new block name

--- a/blocks/grid-column-links/grid-column-links.css
+++ b/blocks/grid-column-links/grid-column-links.css
@@ -1,3 +1,3 @@
-.grid-footer-links > div.link-with-icon:first-of-type a {
+.grid-column-links > div.link-with-icon:first-of-type a {
     font-size: 1.2em;
 }
