--- a/styles/base/_footer.scss
+++ b/styles/base/_footer.scss
@@ -2,6 +2,8 @@
 
 .container-fluid {background-color:slateblue;}
 
+img, picture {width: 100% ;}
+
 /* =========================================================
    GLOBAL TEXT STYLES (all sections)
 ========================================================= */
