Revert "dev: try only moving bootstrap utils to utils"
This reverts commit f0837a99348818dbad21191e3d7531cfe5064642.

--- a/styles/bootstrap/_index.scss
+++ b/styles/bootstrap/_index.scss
@@ -20,3 +20,4 @@
 // 6. Include any other optional stylesheet partials as desired; list below is not inclusive of all available stylesheets
 @use 'containers';
 @use 'grid';
+@use 'utilities';
