--- a/styles/bootstrap/_utilities.scss
+++ b/styles/bootstrap/_utilities.scss
@@ -1,6 +1,6 @@
 @use "sass:map";
-@use "../bootstrap/mixins/breakpoints";
-@use "../bootstrap/variables";
+@use "mixins/breakpoints";
+@use "variables";
 
 // Utility classes for flexbox
 // https://getbootstrap.com/docs/5.3/utilities/flex/
