--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -70,11 +70,11 @@
   }
 }
 
-.form .panel-repeatable-panel {
+.form .repeat-wrapper.panel-repeatable-panel {
   &[data-max='1'] button.item-add {
     display: none;
   }
-  
+
   > fieldset[data-index="0"]{
     .first-entry-title{
       display: block;
@@ -83,7 +83,7 @@
       display: none;
     }
   }
-  
+
   > fieldset:not([data-index="0"]){
     .first-entry-title{
       display: none;
